# Hull-Tactical-Market-Prediction

./: .gitignore  LICENSE  README.md  initialization.sh  pyproject.toml  requirements.txt
configs/: logging.yaml
docs/: 01_problem_definition.md
experiments/: demo_exception.py  test_logging.py
notebooks/: data_ingestion.ipynb
src/markets/data_ingestion/: data.md
src/markets/exception/: __init__.py
src/markets/logger/: formatters.py  logging.py
