[project]
name = "Hull-Tactical-Market-Prediction"
version = "0.1.0"
description = "Hull-Tactical-Market-Prediction - predict the stock market returns as represented by the excess returns of the S&P 500 while also managing volatility constraints."
readme = "README.md"
license = {text = "MIT-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "JotiRoy01"},
    {email = "jotiroygit@gmail.com"}
]
keywords = ["S&P 500", "Efficient Market Hypothesis", "develop innovative strategies", "kaggle-competition"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/markets"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.mypy]
python_version = "3.10"
strict = false

[project.urls]
project = "https://github.com/JotiRoy01/Hull-Tactical-Market-Prediction"